--- a/package.json
+++ b/package.json
@@ -17,7 +17,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@viclafouch/eslint-config-viclafouch": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-preset-expo": "~8.1.0",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-react-native": "^3.9.1",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "prettier": "^2.1.1"
   },
   "private": true
 }
