--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,19 +9,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
+    "expo": "~38.0.10",
     "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.13.9",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.11.6",
     "@viclafouch/eslint-config-viclafouch": "^2.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.7.0",
+    "babel-preset-expo": "~8.2.3",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
@@ -29,6 +31,5 @@
     "eslint-plugin-react-native": "^3.9.1",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "prettier": "^2.1.1"
-  },
-  "private": true
+  }
 }
