--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "expo": "~38.0.10",
     "expo-status-bar": "^1.0.2",
+    "immer": "^7.0.9",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "^2.3.2",
     "react-native-web": "~0.13.9",
     "react-router-native": "^5.2.0"
   },
